--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,7 +6,6 @@
   // border: 1px solid red;
   width: variables.$Width-mobile;
   height: variables.$Height-mobile;
-  margin: 39px auto 60px;
   &__title {
     text-transform: uppercase;
     text-align: center;
@@ -18,7 +17,6 @@
   @media (min-width: variables.$Width-media) {
     width: variables.$Width-desktop;
     height: variables.$Height-desktop;
-    margin: 89px auto 130px;
     &__title {
       margin-bottom: 50px;
     }
